--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 const options = {
     player_list: [
         { 
-            "file": "https://saseries.akamaized.net/hls/live/2110097/tappak/hdntl=exp=1739090089~acl=%2f*~data=hdntl~hmac=1d7f55d8c8bb45d561f1ef673229e7c0048baba684e9c8a30a41b857361eca27/level_4.m3u8?hdnts=exp=1739004546~acl=/hls/*~hmac=fb83303b26d3574ea685899b1027f35c4e3831bd48d3bc87987bbbc19174b810",
+            "file": "https://mut1.mylife1.top:8088/live/webcricm04/playlist.m3u8?vidictid=201277957972&id=114515&pk=f2a0b8e8da9ff5c7305afab856bbf6349d474d7964b3e20318f6c218c6c5f3c53ecf39e89879fe5bd490f2f1ec019803b0d330348e5e9d6fd540fce8af0c33d1",
             "title": "Pakistan v New Zealand",
             "type": "m3u8"
         }
