--- a/index.html
+++ b/index.html
@@ -117,20 +117,20 @@
 </div>
 
 <div id="playlist">
-    <button onclick="loadVideo()">Pakistan vs New Zealand</button>
+    <button onclick="loadVideo('https://saseries.akamaized.net/hls/live/2110097/tappak/hdntl=exp=1739608593~acl=%2f*~data=hdntl~hmac=bd933eaf3845ebd13093b600aa51c866b52b084c79d314366079921129465d18/level_4.m3u8?hdnts=exp=1739523080~acl=/hls/*~hmac=9d3dcc82c952c92654203ec0fe28613a805fe4f2b1066f9581ec0b45ce5ef324')">Pakistan vs Newzeland</button>
 </div>
 
 <a href="https://whatsapp.com/channel/0029Vb32mMt23n3ZBynqbY2l" class="whatsapp-button">Join WhatsApp Group</a>
 
 <script type="text/javascript">
-function loadVideo() {
+function loadVideo(url) {
     document.getElementById("loadingMessage").style.display = "block";
     
     document.getElementById("playerIframe").onload = function() {
         document.getElementById("loadingMessage").style.display = "none";
     };
     document.getElementById("playerIframe").style.display = "block";
-    document.getElementById("playerIframe").src = "https://m3u8player.org/player.html?url=https://mut1.mylife1.top:8088/live/webcricm04/playlist.m3u8?vidictid=201277957972&id=114515&pk=f2a0b8e8da9ff5c7305afab856bbf6349d474d7964b3e20318f6c218c6c5f3c53ecf39e89879fe5bd490f2f1ec019803b0d330348e5e9d6fd540fce8af0c33d1";
+    document.getElementById("playerIframe").src = "https://m3u8player.org/player.html?url=" + encodeURIComponent(url);
 }
 </script>
 
