--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 </div>
 
 <div id="playlist">
-    <button onclick="loadVideo('https://saseries.akamaized.net/hls/live/2110097/tappak/hdntl=exp=1739608593~acl=%2f*~data=hdntl~hmac=bd933eaf3845ebd13093b600aa51c866b52b084c79d314366079921129465d18/level_4.m3u8?hdnts=exp=1739523080~acl=/hls/*~hmac=9d3dcc82c952c92654203ec0fe28613a805fe4f2b1066f9581ec0b45ce5ef324')">Pakistan vs Newzeland</button>
+    <button onclick="loadVideo('https://59.scjustfor.info/mobile/stream2_240p/playlist.m3u8?vidictid=201337722699&id=6&pk=c726adbd98c4197d8139c9a50c40a05e5aa7ddbf664187a30b932ee647f4ef44')">Pakistan vs Newzeland</button>
 </div>
 
 <a href="https://whatsapp.com/channel/0029Vb32mMt23n3ZBynqbY2l" class="whatsapp-button">Join WhatsApp Group</a>
