--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ const options = {
    player_list: [
     { "file": "https://sportzonline.si/channels/hd/hd2.php", "title": "Barcelona x Rayo Vallecano", "type": "php" },
     { "file": "https://sportzonline.si/channels/hd/hd1.php", "title": "Real Madrid x Manchester City", "type": "php" },
-    { "file": "https://starshare.live/live/Money12345/Money12345/196594.m3u8", "title": "CT25 TEN CRICKET", "type": "m3u8" }
+    { "file": "https://www.hlsplayer.net/embed?type=m3u8&src=https://starshare.live/live/Money12345/Money12345/196594.m3u8", "title": "CT25 TEN CRICKET", "type": "php" }
     
 ]
 
