--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 const options = {
    player_list: [
     { "file": "https://sportzonline.si/channels/hd/hd2.php", "title": "Barcelona x Rayo Vallecano", "type": "php" },
-    { "file": "https://sportzonline.si/channels/hd/hd1.php", "title": "Real Madrid x Manchester City", "type": "php" },
+    { "file": "https://cdn07isb.tamashaweb.com:8087/YlUHeDQb7a/157-3H/playlist.m3u8", "title": "CT25 permanent link", "type": "m3u8" },
     { "file": "https://www.hlsplayer.net/embed?type=m3u8&src=https://starshare.live/live/Money12345/Money12345/196594.m3u8", "title": "CT25 TEN CRICKET", "type": "php" }
     
 ]
