--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <body>
 
 <div class="instruction-box">
-    Instructions: Select a match from the buttons below to start streaming. If the video doesn’t load immediately, please wait a few seconds and try again.
+    Instructions: Cilck  on button and wait at least 1 mintute. click on video button to play.if stops,refresh the page.
 </div>
 
 <div id="loadingMessage" style="display: none;">Loading stream...</div>
