--- a/index.html
+++ b/index.html
@@ -139,6 +139,8 @@ const options = {
    player_list: [
     { "file": "https://saseries.akamaized.net/hls/live/2110097/tappak/hdntl=exp=1740040976~acl=%2f*~data=hdntl~hmac=3982412fa40d3356fce926215817576295c07e484117f04b442c255b66996ce4/level_4.m3u8", "title": Pakistan vs New zeland", "type": "m3u8" },
     { "file": "https://cdn07isb.tamashaweb.com:8087/YlUHeDQb7a/157-3H/playlist.m3u8", "title": "CT25 permanent link", "type": "m3u8" },
+    { "file": "https://ml-pull-hwc.myco.io/stream1/hls/stream1.m3u8", "title": "CT25 permanent link 2", "type": "m3u8" },
+    { "file": "https://jiotvbpklive.cdn.jio.com/bpk-tv/IDCDemo_IPL23_Sports18_MOB/Fallback/index.m3u8", "title": "CT25 permanent Hindi", "type": "m3u8" },
     { "file": "https://www.hlsplayer.net/embed?type=m3u8&src=https://starshare.live/live/Money12345/Money12345/196594.m3u8", "title": "CT25 TEN CRICKET", "type": "php" }
     
 ]
