--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <script type="text/javascript">
 const options = {
     player_list: [
-        { "file": "https://saseries.akamaized.net/hls/live/2110097/tappak/hdntl=exp=1740040976~acl=%2f*~data=hdntl~hmac=3982412fa40d3356fce926215817576295c07e484117f04b442c255b66996ce4/level_4.m3u8", "title": "Pakistan vs New Zealand", "type": "m3u8" },
+        { "file": "https://saseries.akamaized.net/hls/live/2110097/tappak/hdntl=exp=1740126971~acl=%2f*~data=hdntl~hmac=33cc83f9a74f2bba99f8d19ba15676f27b968381785247be4b2ae465f67c3046/level_4.m3u8?hdnts=exp=1740041461~acl=/hls/*~hmac=d1a0ae718e430c58f172ecac519ca2514e678e47a8ea31303402cbfd10dc1769", "title": "IND vs BAN", "type": "m3u8" },
         { "file": "https://cdn07isb.tamashaweb.com:8087/YlUHeDQb7a/157-3H/playlist.m3u8", "title": "CT25 permanent link", "type": "m3u8" },
         { "file": "https://ml-pull-hwc.myco.io/stream1/hls/stream1.m3u8", "title": "CT25 permanent link 2", "type": "m3u8" },
         { "file": "https://jiotvbpklive.cdn.jio.com/bpk-tv/IDCDemo_IPL23_Sports18_MOB/Fallback/index.m3u8", "title": "CT25 permanent Hindi", "type": "m3u8" },
