--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <body>
 
 <div class="instruction-box">
-    Click on a match to play. If it stops, refresh or try an external player.
+    Click on a match name or video to play. If it stops, refresh or try an mx or vlc  player etc by clicking on (🔗) .
 </div>
 
 <div id="playerContainer">
