--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>CricX Stream</title>
+  <title>CricX Stream - No Ads</title>
+  <script src="https://cdn.jsdelivr.net/npm/clappr@latest/dist/clappr.min.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -24,33 +25,12 @@
       font-weight: bold;
     }
 
-    #playerContainer {
+    #player {
       width: 100%;
       max-width: 100%;
       height: 250px;
-      background-color: black;
       margin: 10px auto;
-      position: relative;
-    }
-
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-      display: block;
-    }
-
-    #loadingMessage {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: white;
-      font-size: 16px;
-      background-color: rgba(0, 0, 0, 0.7);
-      padding: 10px 15px;
-      border-radius: 5px;
-      display: none;
+      background: black;
     }
 
     #playlist {
@@ -104,13 +84,10 @@
 <body>
 
 <div class="instruction-box">
-  Click on a match name or video to play. If it stops, refresh or try an MX or VLC player etc. by clicking on (🔗).
+  Click on a match to play. No ads. If it stops, try refreshing or opening with VLC/MX via (🔗).
 </div>
 
-<div id="playerContainer">
-  <div id="loadingMessage">Loading... 0%</div>
-  <iframe id="playerFrame" allow="autoplay" src=""></iframe>
-</div>
+<div id="player"></div>
 
 <div id="playlist"></div>
 
@@ -120,11 +97,18 @@
 
 <script>
   const matches = [
-    { name: "PSL Link 1", link: "https://topembed.pw/channel/exislamars" },
-    { name: "PSL Link 2", link: "https://topembed.pw/channel/SkySportsMix[UK]" }
+    {
+      name: "PSL Link 1",
+      m3u8: "https://crichdstreaming.xyz/embed2.php?id=ptvhd"
+    },
+    {
+      name: "PSL Link 2",
+      m3u8: "https://crichdstreaming.xyz/embed2.php?id=skysmix"
+    }
   ];
 
   const playlist = document.getElementById("playlist");
+  let playerInstance = null;
 
   matches.forEach(match => {
     const matchItem = document.createElement("div");
@@ -133,46 +117,40 @@
     const button = document.createElement("button");
     button.className = "match-button";
     button.innerText = match.name;
-    button.onclick = () => loadVideo(match.link);
+    button.onclick = () => loadStream(match.m3u8);
 
     const extButton = document.createElement("button");
     extButton.className = "external-button";
     extButton.innerText = "🔗";
-    extButton.onclick = () => openExternal(match.link);
+    extButton.onclick = () => openExternal(match.m3u8);
 
     matchItem.appendChild(button);
     matchItem.appendChild(extButton);
     playlist.appendChild(matchItem);
   });
 
-  function loadVideo(url) {
-    const playerFrame = document.getElementById("playerFrame");
-    const loadingMessage = document.getElementById("loadingMessage");
+  function loadStream(url) {
+    if (playerInstance) {
+      playerInstance.destroy();
+    }
 
-    loadingMessage.style.display = "block";
-    playerFrame.style.display = "none";
-    playerFrame.src = "";
-
-    let progress = 0;
-    const interval = setInterval(() => {
-      progress += 10;
-      loadingMessage.textContent = `Loading... ${progress}%`;
-      if (progress >= 100) {
-        clearInterval(interval);
-        loadingMessage.style.display = "none";
-        playerFrame.style.display = "block";
-        playerFrame.src = url + "?autoplay=1&muted=1";
-      }
-    }, 300);
+    playerInstance = new Clappr.Player({
+      source: url,
+      parentId: "#player",
+      autoPlay: true,
+      mute: true,
+      height: "100%",
+      width: "100%"
+    });
   }
 
   function openExternal(url) {
     window.location.href = `intent:${url}#Intent;action=android.intent.action.VIEW;type=video/mp4;end;`;
   }
 
-  // Auto-load first match
+  // Auto-play first match
   window.onload = function () {
-    loadVideo(matches[0].link);
+    loadStream(matches[0].m3u8);
   };
 </script>
 
